fix response properties on mobile

--- a/app/components/Operations/sampleResponse.scss
+++ b/app/components/Operations/sampleResponse.scss
@@ -31,6 +31,7 @@
 
 .response__property {
   display: block;
+  padding: 0 1em;
 }
 
 .response__property__labels {
